iptables-save.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Tue May 19 06:39:10 2026
*mangle
:PREROUTING ACCEPT [366934:71482257]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [94981:35678603]
:POSTROUTING ACCEPT [387484:92605911]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A POSTROUTING -p sctp -m sctp --sport 38412 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Tue May 19 06:39:10 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Tue May 19 06:39:10 2026
*filter
:INPUT ACCEPT [73269:14440432]
:FORWARD DROP [100:8700]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A FORWARD -s 192.168.3.0/24 -d 10.60.0.0/24 -i eth1 -o br-free5gc -j ACCEPT
-A FORWARD -s 10.60.0.0/24 -d 192.168.3.0/24 -i br-free5gc -o eth1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -j ts-forward
-A FORWARD -o br-free5gc -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-free5gc -j DOCKER
-A FORWARD -i br-free5gc ! -o br-free5gc -j ACCEPT
-A FORWARD -i br-free5gc -o br-free5gc -j ACCEPT
-A FORWARD -s 10.88.120.0/24 -d 10.60.0.0/24 -i eth1 -o br-free5gc -j ACCEPT
-A FORWARD -s 10.60.0.0/24 -d 10.88.120.0/24 -i br-free5gc -o eth1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER -d 10.100.200.5/32 ! -i br-free5gc -o br-free5gc -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER -d 10.100.200.5/32 ! -i br-free5gc -o br-free5gc -p tcp -m tcp --dport 2122 -j ACCEPT
-A DOCKER -d 10.100.200.5/32 ! -i br-free5gc -o br-free5gc -p tcp -m tcp --dport 2121 -j ACCEPT
-A DOCKER -d 10.100.200.7/32 ! -i br-free5gc -o br-free5gc -p tcp -m tcp --dport 9082 -j ACCEPT
-A DOCKER -d 10.100.200.7/32 ! -i br-free5gc -o br-free5gc -p udp -m udp --dport 8805 -j ACCEPT
-A DOCKER -d 10.100.200.7/32 ! -i br-free5gc -o br-free5gc -p udp -m udp --dport 2152 -j ACCEPT
-A DOCKER -d 10.100.200.10/32 ! -i br-free5gc -o br-free5gc -p sctp -m sctp --dport 38412 -j ACCEPT
-A DOCKER -d 10.100.200.10/32 ! -i br-free5gc -o br-free5gc -p tcp -m tcp --dport 8000 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-free5gc ! -o br-free5gc -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-free5gc -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.123.36.96/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Tue May 19 06:39:10 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Tue May 19 06:39:10 2026
*nat
:PREROUTING ACCEPT [9827:625894]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1283:84989]
:POSTROUTING ACCEPT [9107:555557]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 192.168.3.0/24 -d 10.60.0.0/24 -o br-free5gc -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -s 10.100.200.0/24 ! -o br-free5gc -j MASQUERADE
-A POSTROUTING -s 10.100.200.5/32 -d 10.100.200.5/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A POSTROUTING -s 10.100.200.5/32 -d 10.100.200.5/32 -p tcp -m tcp --dport 2122 -j MASQUERADE
-A POSTROUTING -s 10.100.200.5/32 -d 10.100.200.5/32 -p tcp -m tcp --dport 2121 -j MASQUERADE
-A POSTROUTING -s 10.100.200.7/32 -d 10.100.200.7/32 -p tcp -m tcp --dport 9082 -j MASQUERADE
-A POSTROUTING -s 10.100.200.7/32 -d 10.100.200.7/32 -p udp -m udp --dport 8805 -j MASQUERADE
-A POSTROUTING -s 10.100.200.7/32 -d 10.100.200.7/32 -p udp -m udp --dport 2152 -j MASQUERADE
-A POSTROUTING -s 10.100.200.10/32 -d 10.100.200.10/32 -p sctp -m sctp --dport 38412 -j MASQUERADE
-A POSTROUTING -s 10.100.200.10/32 -d 10.100.200.10/32 -p tcp -m tcp --dport 8000 -j MASQUERADE
-A POSTROUTING -s 10.88.120.0/24 -d 10.60.0.0/24 -o br-free5gc -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-free5gc -j RETURN
-A DOCKER ! -i br-free5gc -p tcp -m tcp --dport 5000 -j DNAT --to-destination 10.100.200.5:5000
-A DOCKER ! -i br-free5gc -p tcp -m tcp --dport 2122 -j DNAT --to-destination 10.100.200.5:2122
-A DOCKER ! -i br-free5gc -p tcp -m tcp --dport 2121 -j DNAT --to-destination 10.100.200.5:2121
-A DOCKER ! -i br-free5gc -p tcp -m tcp --dport 9082 -j DNAT --to-destination 10.100.200.7:9082
-A DOCKER ! -i br-free5gc -p udp -m udp --dport 8805 -j DNAT --to-destination 10.100.200.7:8805
-A DOCKER ! -i br-free5gc -p udp -m udp --dport 2152 -j DNAT --to-destination 10.100.200.7:2152
-A DOCKER -d 10.88.120.100/32 ! -i br-free5gc -p sctp -m sctp --dport 38412 -j DNAT --to-destination 10.100.200.10:38412
-A DOCKER ! -i br-free5gc -p tcp -m tcp --dport 8000 -j DNAT --to-destination 10.100.200.10:8000
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Tue May 19 06:39:10 2026
